Implement mute shortcode

--- a/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/eenheden_omzetten/index.mdx
@@ -89,12 +89,12 @@ Dit kan je als volgt onthouden: beeld je een fles melk in van $1 \si{ l}$.
 Stel je nu 3 kubussen voor: een met zijden van $1 \si{ m}$, een met zijden van
 $10 \si{ cm}$ en een met zijden van $1 \si{ cm}$. Welke van deze kubussen heeft
 ongeveer hetzelfde volume als het melkkarton? Ter illustratie
-{{< mute "(de figuur is niet op exacte schaal, maar geeft wel een idee van de groottes)" >}}:
+<Mute text="(de figuur is niet op exacte schaal, maar geeft wel een idee van de groottes)" />:
 
 ![](img/liter_conversion.png)
 
 Je ziet dat de kubus met een zijde van $1 \si{ dm}$
-{{< mute "($= 10 \si{ cm}$)" >}}
+<Mute text="($= 10 \si{ cm}$)" />
 ongeveer hetzelfde volume heeft als de fles melk, en inderdaad
 $1 \si{ l} = 1 \si{ dm}^3$.
 
