--- a/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/resulterende_kracht/index.mdx
@@ -51,7 +51,7 @@ Dat kan op twee manieren:
 ![Resulterende kracht tekenen](img/add_krachten.png)
 
 We zien dat de resulterende kracht $\green{\vec{F}_{rM}}$ naar rechtsbeneden wijst.
-De grootte van de resulterende kracht {{< mute "(in newton)" >}} zullen we in een
+De grootte van de resulterende kracht <Mute text="(in newton)" /> zullen we in een
 andere les leren berekenen.
 
 In [de volgende les](snelheidsverandering) leren we dat Maria door deze
