--- a/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/snelheidsverandering/index.mdx
@@ -30,8 +30,8 @@ We leerden in een [eerdere les](krachtvector) al dat kracht een
 vectoriële grootheid is. Dat betekent dat een kracht een **grootte, richting en
 zin** heeft. Net als kracht, is **snelheid ook een vectoriële grootheid**. Zo
 is het niet alleen belangrijk hoe snel je rijdt
-{{< mute "(= grootte van de vector)" >}}, maar ook waar je naartoe rijdt
-{{< mute "(= richting en zin van de vector)" >}}. We schrijven de
+<Mute text="(= grootte van de vector)" />, maar ook waar je naartoe rijdt
+<Mute text="(= richting en zin van de vector)" />. We schrijven de
 snelheidsvector als $\vec{v}$.
 
 ![](img/snelheidsvector.png)
@@ -61,11 +61,11 @@ snelheidsverandering te bespreken.
 
 Wanneer de snelheid vergroot of verkleint, verandert de **grootte** van de
 snelheidsvector. Wanneer je bijvoorbeeld sneller begint te trappen op je fiets,
-vergroot de vector $\vec{v}$ {{< mute "(je gaat sneller vooruit)" >}}.
+vergroot de vector $\vec{v}$ <Mute text="(je gaat sneller vooruit)" />.
 
 ![De snelheidsvector vergroot](img/snelheid_vergroot.png)
 
-Wanneer je remt, verkleint de vector $\vec{v}$ {{< mute "(je gaat trager vooruit)" >}}.
+Wanneer je remt, verkleint de vector $\vec{v}$ <Mute text="(je gaat trager vooruit)" />.
 
 ![De snelheidsvector verkleint](img/snelheid_verkleint.png)
 
