--- a/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
+++ b/src/content/lessen/fysica/krachten_1/zwaartekracht/index.mdx
@@ -55,7 +55,7 @@ de maan. De **zwaarteveldsterkte** zegt hoe hard er aan
 voorwerpen met een bepaalde massa wordt getrokken door de zwaartekracht. Het
 symbool voor de zwaarteveldsterkte is $g$ en de eenheid van $g$ is
 $\si{N/kg}$. Dat kan je interpreteren als met hoeveel kracht
-{{< mute "(newton)" >}} een hemellichaam {{< mute "(bv. de aarde)" >}} trekt
+<Mute text="(newton)" /> een hemellichaam <Mute text="(bv. de aarde)" /> trekt
 aan een massa van één kilogram.
 
 | Grootheid          | Symbool | Eenheid     | Interpretatie                                                          |
