--- a/src/content/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/absorberen_reflecteren_doorlaten/index.mdx
@@ -70,7 +70,7 @@ reflectie**.
 ![](img/reflectie.png)
 
 De meeste voorwerpen zijn echter **niet spiegelend**. Een wit voorwerp dat niet
-spiegelt {{< mute "(bijvoorbeeld een wit geverfde muur)" >}}, weerkaatst alle
+spiegelt <Mute text="(bijvoorbeeld een wit geverfde muur)" />, weerkaatst alle
 invallende stralen maar **verandert de volgorde van de invallende stralen** op
 een willekeurige manier. Hierdoor kan je jezelf niet spiegelen in een witte
 muur. We spreken dan van **diffuse reflectie**.
