--- a/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
+++ b/src/content/lessen/fysica/lichtstralen/schaduwvorming/index.mdx
@@ -80,7 +80,7 @@ uit ziet, kijken we op welke plekken er wel of geen lichtstralen geraken.
 Omdat een diffuse lichtbron eigenlijk bestaat uit allemaal
 kleine puntlichtbronnen, bekijken we de schaduw van enkele van die
 puntlichtbronnen apart.
-{{< mute "Om de illustratie eenvoudig te houden, beperken we ons tot een bolvormige diffuse lichtbron." >}}
+<Mute text="Om de illustratie eenvoudig te houden, beperken we ons tot een bolvormige diffuse lichtbron." />
 
 ![](img/diffuse_bron_straal_schaduwen.png)
 
@@ -101,10 +101,10 @@ veel meer flatterend zijn.
 ## De schaduw tekenen van een diffuse lichtbron
 
 Om de kernschaduw en de bijschaduw te tekenen van een ondoorzichtige bol
-wanneer deze belicht wordt door een {{< mute "bolvormige" >}} diffuse
+wanneer deze belicht wordt door een <Mute text="bolvormige" /> diffuse
 lichtbron, heb je vier lijntjes nodig. De eerste twee lijnen vertrekken vanuit
-de **bovenkant van de lichtbron** {{< mute "(groen op de figuur)" >}}, de andere
-twee vanuit de **onderkant van de lichtbron** {{< mute "(blauw op de figuur)" >}}.
+de **bovenkant van de lichtbron** <Mute text="(groen op de figuur)" />, de andere
+twee vanuit de **onderkant van de lichtbron** <Mute text="(blauw op de figuur)" />.
 Van de twee lijnen gaat er telkens één langs de bovenkant van de
 ondoorschijnende bol en één langs de onderkant.
 
