--- a/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
+++ b/src/content/lessen/wiskunde/1g_vgl/functies/index.mdx
@@ -121,7 +121,7 @@ En we krijgen een vergelijking! Wanneer we deze oplossen, vinden we de {{< class
 
 En inderdaad, $f(\orange{4}) = -\orange{4} + 4 = 0$! De nulwaarde is dus
 $\orange{4}$ en het nulpunt is $(\orange{4}, 0)$
-{{< mute "(met een x- én y-coördinaat)" >}}.
+<Mute text="(met een x- én y-coördinaat)" />.
 Dit kan je ook zien op onderstaande grafiek:
 
 ![](plt/nulpunt.png)
