--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide/index.mdx
@@ -41,7 +41,7 @@ berekenen voor $\Delta x$ naar $0$**:
 $$\lim\_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}$$
 
 Zo krijgen we meteen de **formule om een afgeleide te berekenen in $x = a$**, afgekort
-schrijven we "$f'(a)$" {{< mute "(let op het accentje na de $f$)" >}}:
+schrijven we "$f'(a)$" <Mute text="(let op het accentje na de $f$)" />:
 
 $$f'(a) = \lim\_{\Delta x \to 0} \frac{\green{f(a + \Delta x)} - \green{f(a)}}{\orange{\Delta x}}$$
 
@@ -160,7 +160,7 @@ letterlijk $\green{4 + \Delta x}$ in te vullen in ons functievoorschrift:
 > van de vorm $(a + b)^2 = a^2 + 2ab + b^2$.
 
 Als we nu ook nog $\green{f(4)}$ uitrekenen, kennen we de twee termen in de
-teller {{< mute "(bovenaan)" >}} van de breuk:
+teller <Mute text="(bovenaan)" /> van de breuk:
 
 \begin{split}
 \green{f(4)} &= -3 \cdot \green{4}^2 + 5\\\\\
@@ -194,10 +194,10 @@ $$\lim\_{\Delta x \to 0} (\green{- 24 - 3\Delta x})$$
 
 Hier zie je duidelijk waar die _wegdrijvende_ $3$ vandaan komt. Wanneer we
 $\Delta x$ kleiner en kleiner kiezen
-{{< mute "(bv. $0{,}1$; $0{,}01$; $0{,}001$;...)" >}} gaan we de $\green{-3}$
+<Mute text="(bv. $0{,}1$; $0{,}01$; $0{,}001$;...)" /> gaan we de $\green{-3}$
 steeds vermenigvuldigen met kleiner en kleiner getal en gaan we van de
 $\green{-24}$ steeds een kleiner en kleiner getal aftrekken
-{{< mute "($0{,}3$; $0{,}03$; $0{,}003$;...)" >}}.
+<Mute text="($0{,}3$; $0{,}03$; $0{,}003$;...)" />.
 
 De limiet uitrekenen is heel eenvoudig, want als $\Delta x$ heel dicht naar $0$
 gaat, dan zal $\green{-3 \Delta x}$ ook naar $0$ gaan en blijft dus enkel
