--- a/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afleidbaarheid/index.mdx
@@ -23,7 +23,7 @@ $$ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} 
 
 We hebben ons echter nooit afgevraagd of die afgeleide wel altijd berekend kan
 worden. In deze les leren we over de **afleidbaarheid** van een functie. We
-gaan zien dat sommige {{< mute "(meestal vrij exotische)" >}} functies niet
+gaan zien dat sommige <Mute text="(meestal vrij exotische)" /> functies niet
 voor elke keuze van $x = a$ kunnen afgeleid worden.
 
 ## Linker- en rechterlimiet, wat was dat weer?
@@ -54,11 +54,11 @@ We zien dat in zowel de linker- als rechterkolom de getallen steeds dichter en
 dichter bij $0$ komen.
 
 -   Wanneer we $\Delta x$ **kleiner** houden dan $0$, zeggen we dat we de
-    **linkerlimiet** berekenen {{< mute "(omdat we van links naar $0$ gaan)" >}}. Dit
+    **linkerlimiet** berekenen <Mute text="(omdat we van links naar $0$ gaan)" />. Dit
     schrijven we als $$\lim\_{\Delta x \underset{\lt}{\to} 0}$$ Let op het
     _kleiner dan_-teken ($\lt$) onder de pijl van de limiet.
 -   Wanneer we $\Delta x$ **groter** houden dan $0$, zeggen we dat we de
-    **rechterlimiet** berekenen {{< mute "(omdat we van rechts naar $0$ gaan)" >}}. Dit
+    **rechterlimiet** berekenen <Mute text="(omdat we van rechts naar $0$ gaan)" />. Dit
     schrijven we als $$\lim\_{\Delta x \underset{\gt}{\to} 0}$$ Let op het
     _groter dan_-teken ($\gt$) onder de pijl van de limiet.
 
@@ -96,7 +96,7 @@ $x = 5$. Dat gat zorgt ervoor dat we in $x = 2$ **geen rechterlimiet** kunnen
 berekenen, omdat wanneer $\Delta x$ _iets_ groter is dan $0$, dan moeten we de
 functiewaarde berekenen van een x-waarde die _iets_ groter is dan $2$. Maar alle
 x-waarden die _iets_ groter zijn dan $2$
-{{< mute "(bv. $2{,}1$; $2{,}01$; $2{,}001$;...)" >}} liggen in die opening en
+<Mute text="(bv. $2{,}1$; $2{,}01$; $2{,}001$;...)" /> liggen in die opening en
 hebben dus **geen functiewaarden**.
 
 ![Discontinue functie tusse x = 2 en x = 5](img/afleidbaarheid_discontinu.png)
@@ -121,7 +121,7 @@ afleidbaar omdat noch de linker- noch de rechterafgeleide bestaat.
 Wanneer een functie **in elk punt van haar domein** afleidbaar is, is het dus
 **onmogelijk dat die functie discontinu is**. We kunnen dus stellen dat **een
 functie die overal afleidbaar is, altijd continu is**
-{{< mute "(geen gaten bevat)" >}}.
+<Mute text="(geen gaten bevat)" />.
 
 ## Functies met "knikken" zijn niet afleidbaar in de knik
 
