--- a/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/differentiequotient/index.mdx
@@ -36,8 +36,8 @@ tussen $\orange{1{,}00~\si{s}}$ en $\orange{3{,}00~\si{s}}$.
 ![Gemiddelde snelheid van Maria tussen 1 s en 3 s berekenen](img/maria_avg_speed_1s_3s.png)
 
 Daarvoor moeten we de **afgelegde afstand**
-{{< mute "(hoeveel (kilo)meter?)" >}} delen door de **tijd die nodig was**
-{{< mute "(hoeveel uur of seconden?)" >}} om die afstand af te leggen:
+<Mute text="(hoeveel (kilo)meter?)" /> delen door de **tijd die nodig was**
+<Mute text="(hoeveel uur of seconden?)" /> om die afstand af te leggen:
 
 \begin{split}
 \text{gem. snelheid} &= \frac{\green{\text{afgelegde afstand} }}{\orange{\text{tijd die nodig was}}}\\\\\
@@ -64,7 +64,8 @@ positie** ($\green{180~\si{m}}$) **en de eerste positie**
 ($\green{20~\si{m}}$). Voor de tijd is dat het **verschil tussen de tweede
 tijd** ($\orange{3{,}00~\si{s}}$) **en de eerste tijd**
 ($\orange{1{,}00~\si{s}}$). Die twee verschillen zetten we vervolgens in een
-**breuk** met in de teller {{< mute "(boven)" >}} het verschil van posities en in de noemer {{< mute "(onder)" >}} het
+**breuk** met in de teller <Mute text="(boven)" /> het verschil van posities en 
+in de noemer <Mute text="(onder)" /> het
 verschil van tijden. We kunnen de formule voor gemiddelde snelheid dus ook als
 volgt schrijven:
 
@@ -79,15 +80,15 @@ _hooguit één_ $\green{\text{positie}}$ overeen. Daarom mogen we zeggen dat
 Maria's **positie een functie is van de tijd**.
 
 > Als je niet meer goed weet vanaf wanneer een verband tussen twee variabelen
-> {{< mute "(zoals positie en tijd)" >}} een functie is, kan je altijd onze
+> <Mute text="(zoals positie en tijd)" /> een functie is, kan je altijd onze
 > [les over functies](../functies/intro) eens nalezen.
 
 We kunnen de **positie** die overeenkomt met tijdstip $\orange{x}$ dus **de
 functiewaarde van $\orange{x}$** noemen en afkorten als $\green{f(x)}$. Wanneer
 we op de luchtfoto's de racewagens met elkaar verbinden, zien we inderdaad dat
 de posities mooi de [grafiek van een functie](../functies/grafiek) volgen
-waarbij de **tijd op de x-as** {{< mute "(horizontale as)" >}} staat en de
-**positie op de y-as** {{< mute "(verticale as)" >}}:
+waarbij de **tijd op de x-as** <Mute text="(horizontale as)" /> staat en de
+**positie op de y-as** <Mute text="(verticale as)" />:
 
 ![De positie van Maria als functie van de tijd](img/maria_race_function.png)
 
@@ -102,14 +103,14 @@ Zo krijgen we:
 
 $$\frac{\green{f(x\_2)} - \green{f(x\_1)}}{\orange{x\_2} - \orange{x\_1}}$$
 
--   In de teller {{< mute "(boven)" >}} staat $\green{f(x\_2)} -
+-   In de teller <Mute text="(boven)" /> staat $\green{f(x\_2)} -
   \green{f(x\_1)}$. Daarmee berekenen we het verschil van de functiewaarden van
     $x\_2$ en $x\_1$. **De teller zegt zo hoeveel de functiewaarde is veranderd**
     tussen $x\_1$ en $x\_2$.
--   In de noemer {{< mute "(onder)" >}} staat dan weer het verschil van die
+-   In de noemer <Mute text="(onder)" /> staat dan weer het verschil van die
     $x\_2$ en $x\_1$ zélf. Door te delen door $\orange{x\_2} - \orange{x\_1}$
     berekenen we de "**gemiddelde** verandering van de functiewaarde **per
-    $x-$eenheid** {{< mute "(bv. per seconde)" >}} tussen $x\_1$ en $x\_2$" in
+    $x-$eenheid** <Mute text="(bv. per seconde)" /> tussen $x\_1$ en $x\_2$" in
     plaats van gewoon de "verandering van de functiewaarde tussen $x\_1$ en
     $x\_2$".
 
