--- a/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/rico_raaklijn/index.mdx
@@ -31,12 +31,12 @@ het je stap voor stap uit!
 
 De **richtingscoëfficiënt** (afgekort _"rico"_) van een eerstegraadsfunctie
 is een maat voor **hoe steil** de rechte is
-{{< mute "(herinner je dat een eerstegraadsfunctie altijd een rechte is)" >}}.
+<Mute text="(herinner je dat een eerstegraadsfunctie altijd een rechte is)" />.
 Je kan de rico van een eerstegraadsfunctie als volgt uit de grafiek van de
 functie halen:
 
 1. Ga ergens op de rechte staan, maakt niet uit waar
-2. Schuif één stapje {{< mute "(een eenheid)" >}} op in de x-richting
+2. Schuif één stapje <Mute text="(een eenheid)" /> op in de x-richting
 3. Kijk hoeveel de rechte is gedaald of gestegen. Als de rechte is **gedaald**,
    is de rico **negatief**. Als de rechte is **gestegen**, is de rico
    **positief**.
@@ -93,7 +93,7 @@ bekijken, zien we toch wel opvallende gelijkenissen met de formule voor het
 De formule voor de **rico en het differentiequotiënt zijn identiek dezelfde**!
 Wat betekent dat? Wel, wanneer we een differentiequotiënt berekenen, berekenen
 we eigenlijk ook de **rico** van de eerstegraadsfunctie
-{{< mute "(of de rechte)" >}} die door de punten met coördinaten
+<Mute text="(of de rechte)" /> die door de punten met coördinaten
 $(\orange{x\_1}, \green{f(x\_1)})$ en $(\orange{x\_2}, \green{f(x\_2)})$ gaat!
 
 ![Het differentiequotiënt tussen twee punten is het zelfde als richtingscoëfficiënt (rico) van de rechte die die twee punten verbindt.](img/difquot_als_rico.png)
@@ -102,7 +102,7 @@ $(\orange{x\_1}, \green{f(x\_1)})$ en $(\orange{x\_2}, \green{f(x\_2)})$ gaat!
 
 In onze les over de [afgeleide in een punt](afgeleide) zagen we dat we de
 afgeleide van een functie in $x = a$ vinden door het differentiequotiënt
-te berekenen waarbij we $\Delta x$ {{< mute "(of $x_2 - x_1$)" >}} naar $0$
+te berekenen waarbij we $\Delta x$ <Mute text="(of $x_2 - x_1$)" /> naar $0$
 laten gaan:
 
 $$ f'(a) = \lim\_{\Delta x \to 0} \frac{ \green{f(a + \Delta x)} - \green{f(a)} }{\orange{\Delta x}} $$
