--- a/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/eenterm/index.mdx
@@ -63,7 +63,7 @@ Merk op de het **minteken** altijd deel uitmaakt van een van de factoren.
 
 ## Coëfficiënt en lettergedeelte
 
-De factoren van een eenterm kunnen {{< mute "(machten van)" >}} getallen of
+De factoren van een eenterm kunnen <Mute text="(machten van)" /> getallen of
 variabelen zijn. De factoren die **getallen** zijn, vormen het cijfergedeelte
 of de **coëfficiënt** van de eenterm. Het **toestandsteken hoort ook bij de
 coëfficiënt** van de eenterm. De factoren die **variabelen** zijn, vormen het
@@ -99,7 +99,7 @@ andere voorbeelden:
 De graad van een eenterm is de **som van de exponenten** van alle variabelen.
 De eenterm $-4xy^\blue{3}$, bijvoorbeeld, is van de **vierde graad** omdat er
 bij $x$ een macht van $\orange{1}$ staat
-{{< mute "(die schrijven we niet)" >}} en bij $y$ een macht van $\blue{3}$:
+<Mute text="(die schrijven we niet)" /> en bij $y$ een macht van $\blue{3}$:
 $-4x^\orange{1}y^\blue{3}$ en $\orange{1} + \blue{3} = 4$.
 
 | Eenterm                              | Graad                                                                                                             |
