--- a/src/content/lessen/wiskunde/eentermen/macht/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/macht/index.mdx
@@ -16,7 +16,7 @@ Om de machten en wortels van eentermen te kunnen berekenen, is het belangrijk
 dat we de **rekenregels voor de macht van een macht en de wortel van een
 macht** steeds goed in ons achterhoofd houden. We zullen ze hier kort even
 herhalen. Stel dat we de volgende macht moeten uitrekenen
-{{< mute "(waarbij $a \in \mathbb{R}$)" >}}:
+<Mute text="(waarbij $a \in \mathbb{R}$)" />:
 
 $$(a^2)^3$$
 
@@ -154,7 +154,7 @@ $$7a^3b^2$$
 
 Het kan soms voorkomen dat een eenterm **letterexponenten** bevat.
 Stel bijvoorbeeld dat we de volgende macht van een eenterm willen berekenen
-{{< mute "($m, n \in \mathbb{Z}$)" >}}:
+<Mute text="($m, n \in \mathbb{Z}$)" />:
 
 $$(a^{(m - 1)}b^{(n + 2)})^3$$
 
