--- a/src/content/lessen/wiskunde/eentermen/product/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/product/index.mdx
@@ -18,7 +18,7 @@ Om eentermen met elkaar te vermenigvuldigen of te delen door elkaar, is het
 belangrijk dat we de **rekenregels voor het vermenigvuldigen en delen van
 machten met hetzelfde grondtal** in ons achterhoofd houden. Stel bijvoorbeeld
 dat we de volgende vermenigvuldiging hebben
-{{< mute "(waarbij $a \in \mathbb{R}$)" >}}:
+<Mute text="(waarbij $a \in \mathbb{R}$)" />:
 
 $$a^2\cdot a^3$$
 
@@ -33,7 +33,7 @@ a^2\cdot a^3 &= a^{2 + 3}\\\\\
 
 De rekenregel voor het _delen_ van machten met hetzelfde grondtal is heel
 gelijkaardig. Stel dat we de volgende deling moeten uitrekenen
-{{< mute "(waarbij $x \in \mathbb{R}_0$)" >}}:
+<Mute text="(waarbij $x \in \mathbb{R}_0$)" />:
 
 $$x^5:x^2$$
 
@@ -164,7 +164,7 @@ $$-3uv^{2}$$
 
 Het kan soms voorkomen dat een eenterm **letterexponenten** bevat. Stel
 bijvoorbeeld dat we de volgende vermenigvuldiging hebben
-{{< mute "($m, n \in \mathbb{Z}$)" >}}:
+<Mute text="($m, n \in \mathbb{Z}$)" />:
 
 $$x^{(m + 1)}y^n\cdot x^2y^n$$
 
