--- a/src/content/lessen/wiskunde/eentermen/som/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/som/index.mdx
@@ -94,7 +94,7 @@ de $6$ en de $2$ bij elkaar optellen, maar niet de $6$ en de $5$?
 
 Wanneer we de coëfficiënten van gelijksoortige eentermen bij elkaar optellen,
 maken we eigenlijk gebruik van de **distributiviteit** van de vermenigvuldiging
-over de optelling in $\mathbb{Q}$ {{< mute "(geldt ook voor $\mathbb{R}$)" >}}:
+over de optelling in $\mathbb{Q}$ <Mute text="(geldt ook voor $\mathbb{R}$)" />:
 
 $$
 \newcommand{\gewoon}{
@@ -121,7 +121,7 @@ We pasten de distributiviteit toe in deze lijn:
 $$(6 + 3)\cdot \orange{2} = 6\cdot\orange{2} + 3\cdot\orange{2}$$
 
 Als we die lijn omdraaien, krijgen we een soort **omgekeerde
-distributiviteit** {{< mute "(dit noemen we ook wel \"afzonderen\")" >}}:
+distributiviteit** <Mute text='(dit noemen we ook wel "afzonderen")' />:
 
 $$6\cdot\orange{2} + 3\cdot\orange{2} = (6 + 3)\cdot \orange{2}$$
 
