--- a/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/variabelen/index.mdx
@@ -75,7 +75,7 @@ $$\text{oppervlakte},~\orange{\text{lengte}},~\blue{\text{breedte}} \in \mathbb{
 Het wordt lastig om altijd "$\text{oppervlakte}$" , "$\orange{\text{lengte}}$" en
 "$\blue{\text{breedte}}$" te schrijven. Daarom gaan we onze variabelen **afkorten**.
 Dat kunnen we bijvoorbeeld doen met **een letter**, zoals $A$ voor de
-oppervlakte {{< mute "(van het Engelse \"Area\")" >}}, $\orange{l}$ voor de
+oppervlakte <Mute text='(van het Engelse "Area")' />, $\orange{l}$ voor de
 lengte en $\blue{b}$ voor de breedte. Onze
 formule wordt dan ook veel eenvoudiger om te schrijven:
 
@@ -112,7 +112,7 @@ A &= \orange{l} \cdot \blue{b}\\\\\
 
 We vinden dat wanneer de variabele $\orange{l=5{,}0~\si{m}}$ en de variabele
 $\blue{b=4{,}0~\si{m}}$, dat dan de variabele
-$A$ {{< mute "(de oppervlakte)" >}} gelijk is aan $20~\si{m}^2$.
+$A$ <Mute text="(de oppervlakte)" /> gelijk is aan $20~\si{m}^2$.
 
 ![](img/living_area_computed.png)
 
