--- a/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/eentermen/vereenvoudigen/index.mdx
@@ -93,7 +93,7 @@ coëfficiënt.
 
 {{< expand "Waarom mag je alle $(-1)-$en voorop zetten?" >}}
 De vermenigvuldiging van rationale getallen is **commutatief**.
-{{< mute "(Hetzelfde geldt voor reële getallen.)" >}} Dat betekent dat de
+<Mute text="(Hetzelfde geldt voor reële getallen.)" /> Dat betekent dat de
 volgorde waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 \begin{split}
@@ -147,7 +147,7 @@ $$\orange{-240}\cdot y\cdot x^3z^3\cdot y^2$$
 
 {{< expand "Waarom mag je de coëfficiënt apart uitrekenen?" >}}
 De vermenigvuldiging van rationale getallen is **commutatief**.
-{{< mute "(Dat is ook zo voor reële getallen.)" >}} Dat betekent dat de
+<Mute text="(Dat is ook zo voor reële getallen.)" /> Dat betekent dat de
 volgorde waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 \begin{split}
@@ -158,7 +158,7 @@ volgorde waarin je een vermenigvuldiging uitrekent, niet uitmaakt:
 
 Je mag in een vermenigvuldiging van rationale getallen de **factoren dus altijd
 van plaats veranderen**. Omdat zowel de variabelen als de getallen in onze
-eenterm _rationaal_ zijn {{< mute "(reëel mag ook)" >}}, mogen we ze dus van
+eenterm _rationaal_ zijn <Mute text="(reëel mag ook)" />, mogen we ze dus van
 plaats veranderen.
 
 \begin{split}
@@ -223,7 +223,7 @@ elkaar mag optellen** wanneer ze **hetzelfde grondtal hebben**:
 
 $$\orange{a^n} \cdot \blue{a^m} = a^{\orange{n} + \blue{m}}$$
 
-Waarbij $a, \orange{n}, \blue{m} \in \mathbb{Q}$ {{< mute "(of $\mathbb{R}$ mag ook)" >}}.
+Waarbij $a, \orange{n}, \blue{m} \in \mathbb{Q}$ <Mute text="(of $\mathbb{R}$ mag ook)" />.
 {{< /expand >}}
 
 ## Factoren rangschikken
