--- a/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
+++ b/src/content/lessen/wiskunde/functies/domein_beeld/index.mdx
@@ -25,7 +25,7 @@ functie.
 ## Domein van een functie
 
 Het _domein_ van een functie is de verzameling
-van x-waarden waarvoor er een functiewaarde {{<mute "(een y-waarde)" >}} bestaat.
+van x-waarden waarvoor er een functiewaarde <Mute text="(een y-waarde)" /> bestaat.
 
 -   Voor elke x-waarde die **niet in het domein** zit, bestaat er **géén
     y-waarde**.
@@ -82,17 +82,17 @@ Die grafiek ziet er zo uit:
 Om op deze grafiek het **domein** af te lezen, moet je de grafiek **projecteren
 op de x-as**. Het resultaat van de projectie
 is aangeduid **{{< class "in het groen op de x-as" "green" >}}**.
-{{< mute "We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." >}}
+<Mute text="We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." />
 We zien dan dat $\green{dom f = [-5; +\infty[}$.
 
 ![](plt/dom.png)
 
-Het **beeld** {{< mute "(of het bereik)" >}} van diezelfde functie kunnen we
+Het **beeld** <Mute text="(of het bereik)" /> van diezelfde functie kunnen we
 vinden door de grafiek nu te **projecteren op de y-as**. Op de onderstaande
 grafiek zie je het resultaat van deze projectie
 **{{< class "in het groen op de y-as" "green" >}}**.
 ![](plt/bld.png)
-{{< mute "We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." >}}
+<Mute text="We gaan ervan uit dat de grafiek oneindig blijft verder stijgen aan de rechterkant." />
 Je vindt dat $\green{bld f = [-6; +\infty[}$.
 
 ## Samengevat
