--- a/src/content/lessen/wiskunde/functies/grafiek/index.mdx
+++ b/src/content/lessen/wiskunde/functies/grafiek/index.mdx
@@ -36,7 +36,7 @@ waardentabel:
 In de laatste rij van die waardentabel is $\orange{x = 5}$ en
 $\green{y = 1{,}5}$. We kunnen dit voorstellen door een puntje met coördinaten
 $(\orange{5};~\green{1{,}5})$.
-{{< mute "(Probeer eens op het puntje te klikken.)" >}}
+<Mute text="(Probeer eens op het puntje te klikken.)" />
 
 ![](plt/single_x.png)
 
@@ -58,7 +58,7 @@ krijgen deze mooie figuur:
 
 We hebben nu zoveel puntjes op ons assenstelsel dat we eigenlijk niet meer zien
 dat het _aparte_ puntjes zijn. Het zijn wel degelijk aparte puntjes
-{{< mute "(beweeg maar eens over de grafiek)" >}},
+<Mute text="(beweeg maar eens over de grafiek)" />,
 maar we zien het als **één doorlopende curve**.
 Deze curve noemen we de **grafiek van de functie**.
 
