--- a/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
+++ b/src/content/lessen/wiskunde/functies/tekenschema/index.mdx
@@ -18,11 +18,11 @@ positief of negatief is. Deze informatie vatten we overzichtelijk samen in een
 
 ## Tekenschema vanuit een grafiek
 
-Welke x-waarden welk teken {{< mute "(positief/negatief/nul)" >}} opleveren
+Welke x-waarden welk teken <Mute text="(positief/negatief/nul)" /> opleveren
 voor de y-waarden, vatten we samen in een **tekenschema**
-{{< mute "(ook wel \"tekentabel\" of \"tekenverloop\" genoemd)" >}}.
+<Mute text='(ook wel "tekentabel" of "tekenverloop" genoemd)'/>.
 Als de [grafiek van een functie](grafiek) is gegeven, kunnen we zien waar de
-functiewaarden {{< mute "(of de y-waarden)" >}} _positief_, _negatief_ of _nul_
+functiewaarden <Mute text="(of de y-waarden)" /> _positief_, _negatief_ of _nul_
 zijn.
 
 ![](plt/tekenschema.png)
@@ -55,10 +55,10 @@ We kunnen een tekenschema ook maken _zonder_ een grafiek. Dit doen we in drie
 stappen.
 
 1. Zet de grenzen van het [domein](domein_beeld#domein-van-een-functie) in de bovenste rij van het tekenschema;
-2. Zoek alle [nulpunten](nulpunten) en zet ze van klein naar groot {{< mute "(volgens x-waarde)" >}} tussen de grenzen van het domein;
-3. Vind de tekens van $y$ tussen alle x-waarden in het schema {{< mute "(tenzij die x-waarden buiten het domein liggen)" >}}.
+2. Zoek alle [nulpunten](nulpunten) en zet ze van klein naar groot <Mute text="(volgens x-waarde)" /> tussen de grenzen van het domein;
+3. Vind de tekens van $y$ tussen alle x-waarden in het schema <Mute text="(tenzij die x-waarden buiten het domein liggen)" />.
 
-We werken deze stappen uit voor de {{< mute "(reële)" >}} functie met
+We werken deze stappen uit voor de <Mute text="(reële)" /> functie met
 [voorschrift](voorschrift) $$f(x) = -x^2 + 9$$
 Dit is de functie die hoort bij de grafiek van daarnet. We hopen dus ook
 hetzelfde tekenschema te krijgen.
@@ -138,9 +138,9 @@ Et voilà! 💪 We krijgen hetzelfde tekenschema als daarnet.
 
 ## Enkel nulpunten en grenzen van domein
 
-De x-waarden die in een tekenschema staan {{< mute "(de bovenste rij)" >}}, zijn _ofwel nulwaarden_ {{% mute
-"($-3$ en $3$ in het vorige voorbeeld)" %}} _ofwel grenzen van het domein_ {{%
-mute "($-\infty$ en $+\infty$ in het voorbeeld)" %}} . Er zijn geen andere
+De x-waarden die in een tekenschema staan <Mute text="(de bovenste rij)" />, zijn _ofwel nulwaarden_
+<Mute text="($-3$ en $3$ in het vorige voorbeeld)"/> _ofwel grenzen van het domein_
+<Mute text="($-\infty$ en $+\infty$ in het voorbeeld)"/>. Er zijn geen andere
 x-waarden nodig. Dat is omdat **het teken van $y$ enkel kan veranderen na een
 nulpunt of na een grens van het domein**.
 
