--- a/src/content/lessen/wiskunde/vector_1/intro/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/intro/index.mdx
@@ -45,7 +45,7 @@ vectoren **gelijk**. De volgende twee vectoren, zijn bijvoorbeeld gelijk:
 De **grootte** van de vector is **hoe lang** de vector is. De grootte van een
 vector is **altijd positief**. We noteren de grootte van een vector $\vec{v}$
 als $\norm{\vec{v}}$ of ook wel gewoon als $v$
-{{< mute "(geen pijltje op de $v$)" >}}.
+<Mute text="(geen pijltje op de $v$)" />.
 
 | Schrijf          | Lees                     |
 | ---------------- | ------------------------ |
