--- a/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
+++ b/src/content/lessen/wiskunde/vector_1/vectoriele_grootheden/index.mdx
@@ -38,9 +38,9 @@ Andere voorbeelden van vectoriële grootheden zijn o.a. snelheid, versnelling en
 
 ## Scalaire grootheden hebben géén richting
 
-Er zijn natuurlijk ook veel grootheden die geen richting hebben. Hoeveel kilogram je weegt {{< mute "(je massa)" >}}, heeft geen richting. Je kan bijvoorbeeld niet "80 kg naar links" wegen, maar wel gewoon "80 kg". Ook temperatuur heeft geen richting. "20 °C naar boven", bestaat niet, maar gewoon "20 °C" wel.
+Er zijn natuurlijk ook veel grootheden die geen richting hebben. Hoeveel kilogram je weegt <Mute text="(je massa)" />, heeft geen richting. Je kan bijvoorbeeld niet "80 kg naar links" wegen, maar wel gewoon "80 kg". Ook temperatuur heeft geen richting. "20 °C naar boven", bestaat niet, maar gewoon "20 °C" wel.
 
-We noemen temperatuur en massa daarom **scalaire grootheden**. Ze hebben **enkel een getalwaarde** {{< mute "(scalar = getal)" >}}. We kunnen geen vectoren gebruiken om de grootheden te beschrijven.
+We noemen temperatuur en massa daarom **scalaire grootheden**. Ze hebben **enkel een getalwaarde** <Mute text="(scalar = getal)" />. We kunnen geen vectoren gebruiken om de grootheden te beschrijven.
 
 ![](img/scal_examples.png)
 
