--- a/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/bewerkingen/index.mdx
@@ -49,8 +49,8 @@ zo uit:
 
 $$(2a^2b - 4ab^3) + (2ab^3 - 3a^2b)$$
 
-We gaan ervan uit dat de variabelen {{< mute "($a$ en $b$)" >}} reële getallen
-zijn {{< mute "(of rationale getallen, maakt niet uit)" >}}. We mogen dus de
+We gaan ervan uit dat de variabelen <Mute text="($a$ en $b$)" /> reële getallen
+zijn <Mute text="(of rationale getallen, maakt niet uit)" />. We mogen dus de
 rekenregels voor reële getallen toepassen. Die zeggen dat de **optelling in
 $\mathbb{R}$ associatief is**. Dat betekent dat het niet uitmaakt of we al dan
 niet haakjes zetten in een optelling en dat het niet uitmaakt waar we dan wel
@@ -76,7 +76,7 @@ gelijksoortige eentermen bij elkaar op te tellen:
 Het **aftrekken** van twee veeltermen gaat zo:
 
 1. Laat de **haakjes weg** en **verander de toestandstekens**
-   {{< mute "($+$ en $-$)" >}} van de termen van de veelterm die **na het
+   <Mute text="($+$ en $-$)" /> van de termen van de veelterm die **na het
    minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
 
@@ -326,7 +326,7 @@ Het **optellen** van twee veeltermen doe je zo:
 Het **aftrekken** van twee veeltermen gaat zo:
 
 1. Laat de **haakjes weg** en **verander de toestandstekens**
-   {{< mute "($+$ en $-$)" >}} van de termen van de veelterm die **na het
+   <Mute text="($+$ en $-$)" /> van de termen van de veelterm die **na het
    minteken** stond.
 2. Je krijgt nu één lange veelterm. **Vereenvoudig en herleid** die veelterm.
    {{< /attention >}}
