--- a/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
+++ b/src/content/lessen/wiskunde/veeltermen/vereenvoudigen/index.mdx
@@ -46,8 +46,8 @@ zijn. Bijvoorbeeld:
 Wanneer de **uitdrukking tussen haakjes een eenterm** is, mag je de **haakjes
 gewoon weglaten**. Dat mag omdat de vermenigvuldiging in $\mathbb{R}$
 associatief is en we ervan uitgaan dat alle variabelen reële
-{{% mute "($\in \mathbb{R}$)" %}} of rationale
-{{% mute "($\in \mathbb{Q}$)" %}} getallen zijn. Bijvoorbeeld:
+<Mute text="($\in \mathbb{R}$)" /> of rationale
+<Mute text="($\in \mathbb{Q}$)" /> getallen zijn. Bijvoorbeeld:
 
 -   $$-ab^2 + \sqrt{3}\cdot \orange{(b^3c^2)} = -ab^2 + \sqrt{3}\cdot \orange{b^3c^2}$$
 -   $$6\cdot \orange{(x^3y^3)} + 5y^2 = 6\cdot \orange{x^3y^3} + 5y^2$$
@@ -99,7 +99,7 @@ Wanneer alle eentermen in een veelterm vereenvoudigd zijn, gaan we alle
 **herleiden van de veelterm**. Om de gelijksoortige eentermen bij elkaar te
 kunnen optellen, moeten we natuurlijk eerst op zoek naar waar er allemaal
 gelijksoortige eentermen zijn in de veelterm. In de vorige stap
-{{< mute "(eentermen vereenvoudigen)" >}} hebben we de factoren van de
+<Mute text="(eentermen vereenvoudigen)" /> hebben we de factoren van de
 eentermen al gerangschikt. Daardoor zal het nu eenvoudiger zijn om de
 gelijksoortige eentermen te vinden.
 
