--- a/src/content/lessen/wiskunde/verzamelingen/intro/index.mdx
+++ b/src/content/lessen/wiskunde/verzamelingen/intro/index.mdx
@@ -44,7 +44,7 @@ $$7 \notin \\{1, -4, 9\\}$$
 ## Deelverzameling van
 
 Een verzameling kan meerdere _deelverzamelingen_ bevatten. Zo bevat de verzameling $\\{1, -4, 9\\}$ onder andere de deelverzamelingen $\\{1, -4\\}$ en $\\{1, 9\\}$. Wanneer een verzameling een deelverzameling is van een andere verzameling, gebruiken we het symbool $\subset$.
-{{< mute "(Merk het verschil op met het symbool $\in$.)" >}}
+<Mute text="(Merk het verschil op met het symbool $\in$.)" />
 Bijvoorbeeld
 $$\\{1, 9\\} \subset \\{1, -4, 9\\}$$
 Wanneer iets geen deelverzameling is, gebruiken we $\not\subset$:
