--- a/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/benaderingsregels/index.mdx
@@ -121,7 +121,7 @@ Deze berekening heeft drie termen:
 
 Het kleinste aantal cijfers na de komma is dus 1. Dat betekent dat we de
 **uitkomst moeten afronden tot op 1 cijfer na de komma**
-{{< mute "(afronden op de tienden dus)" >}}. De uitkomst van de berekening zelf
+<Mute text="(afronden op de tienden dus)" />. De uitkomst van de berekening zelf
 is:
 
 $$24{,}28 + 9{,}1 - 3{,}33 = 36{,}75$$
@@ -152,8 +152,8 @@ Het kleinste aantal beduidende cijfers is dus 2. Dat betekent dat we de
 $$0{,}000247 \cdot 34{,}2 \cdot 9{,}1 = 0{,}07687134$$
 
 Deze uitkomst moeten we afronden zodat enkel de eerste 2 beduidende cijfers
-overblijven {{< mute "($7$ en $6$)" >}}. We moeten dus afronden op de
-duizendsten {{< mute "(3 plaatsen na de komma)" >}}:
+overblijven <Mute text="($7$ en $6$)" />. We moeten dus afronden op de
+duizendsten <Mute text="(3 plaatsen na de komma)" />:
 
 $$0{,}07\orange{6}\gold{8}7134 \approx 0{,}07\orange{7}$$
 
