--- a/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
+++ b/src/content/lessen/fysica/grootheden_eenheden/machten_van_10/index.mdx
@@ -130,7 +130,7 @@ en vervolgens
 
 {{< attention "Omzetten van een macht van 10" >}}
 Als je $a \cdot 10^b$ wilt omzetten naar $\ldots\text{iets}\ldots \cdot \blue{10^c}$
-{{< mute "(met $a, b, c \in \mathbb{R}$)" >}}:
+<Mute text="(met $a, b, c \in \mathbb{R}$)" />:
 
 Vermenigvuldig $a \cdot 10^b$ met
 {{< class "$10^{c}$ om de juiste macht van 10 te hebben" "blue" >}} en met
