--- a/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
+++ b/src/content/lessen/wiskunde/afgeleiden_1/afgeleide_functie/index.mdx
@@ -21,7 +21,7 @@ berekenen.
 
 Gelukkig kunnen we ook de **afgeleide van een volledige functie** berekenen.
 Dat betekent dat we in één keer in **alle x-waarden**
-{{< mute "(waarin $f(x)$ afleidbaar is)" >}} de afgeleide berekenen!
+<Mute text="(waarin $f(x)$ afleidbaar is)" /> de afgeleide berekenen!
 😮 Dat noemen we de **afgeleide functie** van een functie of kortweg **de
 afgeleide van een functie**.
 
@@ -47,7 +47,7 @@ al het werk herhalen van de [vorige les](in_een_punt).
 
 We hebben al geleerd dat een afgeleide functie $f'(x)$ ons veel werk kan
 besparen. Eens we $f'(x)$ gevonden hebben, kunnen we er namelijk eender welke
-x-waarde {{< mute "(waarin $f(x)$ afleidbaar is)" >}} in invullen en vinden we
+x-waarde <Mute text="(waarin $f(x)$ afleidbaar is)" /> in invullen en vinden we
 meteen de afgeleide in die x-waarde. Maar **hoe vinden we die afgeleide
 functie**? Als voorbeeld zoeken we in deze paragraaf de afgeleide functie van
 de volgende tweedegraadsfunctie:
@@ -141,7 +141,7 @@ Ziezo! We hebben de afgeleide functie $f'(x)$ gevonden! 💪
 ## Hoe helpt een afgeleide functie ons nu?
 
 Eens we $f'(x)$ gevonden hebben, kunnen we de afgeleiden van $f(x)$ in eender
-welke x-waarde {{< mute "(waarin $f(x)$ afleidbaar is)" >}} berekenen! In de
+welke x-waarde <Mute text="(waarin $f(x)$ afleidbaar is)" /> berekenen! In de
 [vorige les](in_een_punt) hebben we bijvoorbeeld de afgeleide van de functie
 $f(x) = -3x^2 + 4x -1$ in $x=2$ berekend. Dat vergde toen heel wat werk om te
 vinden dat $f'(2)=-8$. Nu kunnen we dezelfde afgeleide veel sneller berekenen
