--- a/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
+++ b/src/content/lessen/wiskunde/functies/voorschrift/index.mdx
@@ -26,7 +26,7 @@ $$\text{valtijd in seconden} = 0{,}45 \cdot \sqrt{\text{hoogte in meter}}$$
 De valtijd is dus _afhankelijk van_ de hoogte. Daarom kunnen we zeggen dat de
 **valtijd de afhankelijke variabele is**. De afhankelijke variabele duiden we
 altijd aan met $\green{y}$. De variabele waarvan $\green{y}$ afhangt
-{{< mute "(de hoogte in dit geval)" >}} noemen we de **onafhankelijke
+<Mute text="(de hoogte in dit geval)" /> noemen we de **onafhankelijke
 variabele**. Die duiden we altijd aan met $\orange{x}$.
 
 We kunnen in ons voorbeeld de **valtijd** dus vervangen door $\green{y}$ en
@@ -79,7 +79,7 @@ functievoorschrift:
 $$\green{y} = 0{,}45 \cdot \sqrt{\orange{2}} = \green{0{,}64}$$
 
 We komen uit dat $\green{y} = \green{0{,}64}$. Dat betekent dat de bal na
-ongeveer $0{,}64~\si{s}$ op de grond zal zijn. {{< mute "(Probeer dit thuis gerust ook eens uit door een balletje van die hoogte te laten vallen en de valtijd te meten met een chronometer.)" >}}
+ongeveer $0{,}64~\si{s}$ op de grond zal zijn. <Mute text="(Probeer dit thuis gerust ook eens uit door een balletje van die hoogte te laten vallen en de valtijd te meten met een chronometer.)" />
 Voor het functievoorschrift $\green{y} = 0{,}45 \cdot \sqrt{\orange{x}}$ geldt
 dus dat wanneer $\orange{x} = \orange{2}$, dan is $\green{y} = \green{0{,}64}$.
 Wiskundig zeggen we: **de functiewaarde van $\orange{2}$ is $\green{0{,}64}$**.
@@ -131,7 +131,7 @@ Een andere veelgebruikte notatie is om "$f(\ldots)$" te schrijven in plaats van
 Wat doen we met het functievoorschrift? Die begint namelijk ook met "$\green{y}
 = $". Wel, die schrijven we zelf als $\green{y(x)}$ of $\green{f(x)}$. Zo geven
 we aan dat we eigenlijk nog niets hebben ingevuld in het voorschrift
-{{< mute "(of anders gezegd dat we letterlijk $x$ hebben ingevuld)" >}}.
+<Mute text="(of anders gezegd dat we letterlijk $x$ hebben ingevuld)" />.
 
 $$\green{y(x)} = 0{,}45\cdot \sqrt{x}$$
 
