--- a/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen/volgorde_van_de_bewerkingen/index.mdx
@@ -63,14 +63,14 @@ Bij bewerkingen spreken we de volgende **voorrangsregels** af (A.K.A. _de
 volgorde van de bewerkingen_):
 
 1. **Haakjes** hebben voorrang op **alles**;
-2. **Machten** {{< mute "(en wortels)" >}} hebben voorrang op
-   **vermenigvuldigingen** {{< mute "(en delingen)" >}};
-3. **Vermenigvuldingen** {{< mute "(en delingen)" >}} hebben voorrang op
-   **optellingen** {{< mute "(en aftrekkingen)">}};
-4. **Optellingen** {{< mute "(en aftrekkingen)">}} hebben voorrang op **niets**.
+2. **Machten** <Mute text="(en wortels)" /> hebben voorrang op
+   **vermenigvuldigingen** <Mute text="(en delingen)" />;
+3. **Vermenigvuldingen** <Mute text="(en delingen)" /> hebben voorrang op
+   **optellingen** <Mute text="(en aftrekkingen)" />;
+4. **Optellingen** <Mute text="(en aftrekkingen)" /> hebben voorrang op **niets**.
    {{< /attention >}}
 
-De {{< mute "lichtgrijze" >}} bewerkingen hebben dezelfde voorrang als de
+De <Mute text="lichtgrijze" /> bewerkingen hebben dezelfde voorrang als de
 bewerking waar ze bij staan. Een vermenigvuldiging en een deling hebben dus
 allebei voorrang op een som en een aftrekking. Wanneer twee zulke bewerkingen
 na elkaar geschreven staan (dus bv. een deling en dan een vermenigvuldiging),
@@ -94,7 +94,7 @@ $$ 4 - 5 \cdot \clra{8 ^ 2} = 4 - 5 \cdot \clra{64}$$
 
 Nu hebben we de uitdrukking $4 - 5 \cdot 64$ met nog twee bewerkingen:
 min en maal. Eerst $\clra{4 - 5}$ of eerst $\clra{5 \cdot 64}$?
-_"Vermenigvuldingen hebben voorrang op optellingen {{< mute "(en aftrekkingen)" >}}"_, dus:
+_"Vermenigvuldingen hebben voorrang op optellingen <Mute text="(en aftrekkingen)" />"_, dus:
 
 $$ 4 - \clra{5 \cdot 64} = 4 - \clra{320} $$
 
