--- a/src/content/lessen/wiskunde/verzamelingen/bewerkingen/index.mdx
+++ b/src/content/lessen/wiskunde/verzamelingen/bewerkingen/index.mdx
@@ -38,7 +38,7 @@ We nemen uit de eerste verzameling ($\\{-1, 7, 4, 3\\}$) de elementen die in de 
 
 ## Venndiagram
 
-Een typische manier om de vorige bewerkingen {{< mute "(unie, doorsnede en verschil)" >}}
+Een typische manier om de vorige bewerkingen <Mute text="(unie, doorsnede en verschil)" />
 met verzamelingen voor te stellen, is aan de hand van een **venndiagram**. In een venndiagram stellen we verzamelingen voor als **ellipsen of cirkels**.
 
 Als twee verzamelingen bepaalde elementen gemeenschappelijk hebben, laten we de ellipsen daar overlappen.
